k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: auth-service
          image: leventedaroczi/galactic-private:auth-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: firebase-credentials
              mountPath: /run/secrets/firebase
              readOnly: true
      volumes:
        - name: firebase-credentials
          secret:
            secretName: firebase-credentials
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
