k8s/blog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: blog-service
          image: leventedaroczi/galactic-private:blog-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
