k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: galactic-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /blogs
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 80

          - path: /agent
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
